--- a/parser/tests/CMakeLists.txt
+++ b/parser/tests/CMakeLists.txt
@@ -5,12 +5,12 @@ ecm_add_test(${pyasttest_SRCS}
     TEST_NAME pyasttest
     LINK_LIBRARIES kdevpythonparser Qt5::Test KDev::Tests)
 
-if (BUILD_CYTHON_SUPPORT)
-    set(pycythontest_SRCS pycythontest.cpp ../parserdebug.cpp)
-    ecm_add_test(${pycythontest_SRCS}
-        TEST_NAME pycythontest
-        LINK_LIBRARIES kdevpythonparser Qt5::Test KDev::Tests)
-endif()
+# if (BUILD_CYTHON_SUPPORT)
+#     set(pycythontest_SRCS pycythontest.cpp ../parserdebug.cpp)
+#     ecm_add_test(${pycythontest_SRCS}
+#         TEST_NAME pycythontest
+#         LINK_LIBRARIES kdevpythonparser Qt5::Test KDev::Tests)
+# endif()
 
 if (BUILD_ENAML_SUPPORT)
     set(pyenamltest_SRCS pyenamltest.cpp ../parserdebug.cpp)
