--- a/parser/tests/CMakeLists.txt
+++ b/parser/tests/CMakeLists.txt
@@ -3,5 +3,5 @@ set(pyasttest_SRCS pyasttest.cpp ../parserdebug.cpp)
 include_directories(${CMAKE_BINARY_DIR}/duchain)
 ecm_add_test(${pyasttest_SRCS}
     TEST_NAME pyasttest
-    LINK_LIBRARIES kdevpythonparser Qt5::Test KDev::Tests)
+    LINK_LIBRARIES kdevpythonparser Qt${QT_MAJOR_VERSION}::Test KDev::Tests)
 
