--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,10 +2,10 @@
 # SPDX-License-Identifier: CC0-1.0
 
 Dependencies:
-- 'on': ['@all']
-  'require':
-    'frameworks/extra-cmake-modules': '@stable'
-    'frameworks/ki18n': '@stable'
-    'frameworks/threadweaver': '@stable'
-    'frameworks/ktexteditor': '@stable'
-    'kdevelop/kdevelop': '@same'
+- 'on': ['Linux/Qt6', 'FreeBSD/Qt6']
+    'require':
+      'frameworks/extra-cmake-modules': '@latest-kf6'
+      'frameworks/ki18n': '@latest-kf6'
+      'frameworks/threadweaver': '@latest-kf6'
+      'frameworks/ktexteditor': '@latest-kf6'
+      'kdevelop/kdevelop': 'work/apol/kf6'
