--- a/duchain/tests/CMakeLists.txt
+++ b/duchain/tests/CMakeLists.txt
@@ -29,3 +29,18 @@ target_link_libraries(duchainbench
     Qt${QT_MAJOR_VERSION}::Test
     KDev::Tests
 )
+
+if (BUILD_ENAML_SUPPORT)
+    set(enamlduchaintest_SRCS
+        enamlduchaintest.cpp
+        ../duchaindebug.cpp)
+    ecm_add_test(${enamlduchaintest_SRCS}
+        TEST_NAME enamlduchaintest)
+    target_link_libraries(enamlduchaintest
+        kdevpythonduchain
+        kdevpythonparser
+        ${kdevpythonparser_LIBRARIES}
+        Qt${QT_MAJOR_VERSION}::Test
+        KDev::Tests
+    )
+endif()
