--- a/parser/tests/CMakeLists.txt
+++ b/parser/tests/CMakeLists.txt
@@ -5,3 +5,16 @@ ecm_add_test(${pyasttest_SRCS}
     TEST_NAME pyasttest
     LINK_LIBRARIES kdevpythonparser Qt${QT_MAJOR_VERSION}::Test KDev::Tests)
 
+if (BUILD_CYTHON_SUPPORT)
+    set(pycythontest_SRCS pycythontest.cpp ../parserdebug.cpp)
+    ecm_add_test(${pycythontest_SRCS}
+        TEST_NAME pycythontest
+        LINK_LIBRARIES kdevpythonparser Qt${QT_MAJOR_VERSION}::Test KDev::Tests)
+endif()
+
+if (BUILD_ENAML_SUPPORT)
+    set(pyenamltest_SRCS pyenamltest.cpp ../parserdebug.cpp)
+    ecm_add_test(${pyenamltest_SRCS}
+        TEST_NAME pyenamltest
+        LINK_LIBRARIES kdevpythonparser Qt${QT_MAJOR_VERSION}::Test KDev::Tests)
+endif()
